--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.10.11",
+    "@date-io/dayjs": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "clsx": "^1.1.1",
+    "date-fns": "^2.22.1",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-xhr-backend": "^3.2.2",
