--- a/package.json
+++ b/package.json
@@ -11,13 +11,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@date-io/date-fns": "^2.10.11",
-    "@date-io/dayjs": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.3.10",
     "clsx": "^1.1.1",
-    "date-fns": "^2.22.1",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.2.6",
@@ -48,6 +44,8 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
